✏️ fix correspondence typo

--- a/templates/draft.tex
+++ b/templates/draft.tex
@@ -19,7 +19,7 @@ ${ if(authorship.equal) }
 ${ authorship.equal:_render_institutions()[; ] }\\
 ${ endif }
 
-\textbf{Correspondance to:}\\
+\textbf{Correspondence to:}\\
 ${ for(authorship.corresponding) }
 ${ authorship.corresponding.given } ${ authorship.corresponding.family } --- \texttt{${ authorship.corresponding.email }}\\
 ${ endfor }
