--- a/templates/preprint.tex
+++ b/templates/preprint.tex
@@ -26,7 +26,7 @@ ${ if(authorship.equal) }
 ${ authorship.equal:_render_institutions()[; ] }\\
 ${ endif }
 \vskip 1em
-\textbf{Correspondance to:}\\
+\textbf{Correspondence to:}\\
 ${ for(authorship.corresponding) }
 ${ authorship.corresponding.given } ${ authorship.corresponding.family } --- \texttt{${ authorship.corresponding.email }}\\
 ${ endfor }
